[tool.poetry]
name = "beehive3"
version = "3.1.6-alpha"
description = "智能投资框架的中API Server"
authors = ["邱承 <qiucheng@jinniuai.com>"]

[[tool.poetry.source]]
name = 'aliyun'
url = 'https://mirrors.aliyun.com/pypi/simple/'
default = true

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.18.5"
motor = "2.3.0"
python-dotenv = "0.15.0"
python-slugify = "4.0.1"
fastapi = "0.44.1"
uvicorn = "0.12.2"
email-validator = "1.1.1"
passlib = {version = "1.7.4",extras = ["bcrypt"]}
pyjwt = "1.7.1"
ujson = "1.35"
DBUtils = "1.3"
pymysql = "0.9.3"
sentry_asgi = "0.2.0"
gunicorn = "19.9"
apscheduler = "3.6.3"
python-multipart = "0.0.5"
pyarrow = "^0.15.1"
pydantic = "1.7"
freezegun = "0.3.13"
pydiscourse = "1.0.0"
authing = "0.16.9"
cryptography = "2.9.2"
pillow = "7.2.0"
uvloop = "0.14.0"
httptools = "0.1.1"
wechatpy = "^1.8.14"
fastapi-plugins = "^0.4.1"
python-gitlab = "^2.5.0"
"dip.beehive" = {url = "https://cxan.jinchongzi.com/packages/dip/dip.beehive-0.0.3.0.tar.gz#md5=371f825747637607490ba4ff894487f7"}
tencentcloud-sdk-python = "^3.0.315"
dividend-utils = {url = "https://cxan.jinchongzi.com/packages/dividend_utils/dividend_utils-0.1.1.tar.gz#md5=0775028deb0bc4563914c09550257d0a"}
async-timeout = "^3.0.1"
cacheout = "^0.11.2"
typer = "0.3.2"
typer-cli = "^0.0.11"
ability = {url = "https://cxan.jinchongzi.com/packages/ability/ability-0.6.6.tar.gz#md5=ddac02f26e24e8bdc4dc9611df88f317"}
hq2redis = {url = "https://cxan.jinchongzi.com/packages/hq2redis/hq2redis-0.4.13.tar.gz#md5=b3bfdb2fb1a8ab4483f9c5ab1a8784ac"}
zvt = {url = "https://cxan.jinchongzi.com/packages/zvt/zvt-1.0.11.tar.gz#md5=380a5e5efb12b84baf66aa039db3023d"}


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"
pytest-cov = "2.7"
pytest-asyncio = "0.14.0"
mkdocs = "*"
mkdocs-material = "*"
asgi-lifespan = "1.0.1"
aioresponses = "0.7.2"
httpx = ">=0.17.1"
fakeredis = "^1.5.0"

[tool.black]
line-length = 160
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
